--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "stackqueue"
+name = "smallqueue"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-thiserror = "1.0.40"
+thiserror = "1.0"
 
 [lib]
-name = "stackqueue"
-path = "stackqueue.rs"
+name = "smallqueue"
+path = "smallqueue.rs"
